# computer_club

./: CMakeLists.txt  README.md
computer_club/: CMakeLists.txt
computer_club/include/: Club.hpp  Event.hpp  Parser.hpp  Table.hpp  Time.hpp
computer_club/src/: Club.cpp  Event.cpp  Parser.cpp  Table.cpp  Time.cpp  main.cpp
test/: CMakeLists.txt
test/src/: SimpleTest.cpp
